@@ -4,6 +4,10 @@
 	Created by Rocky5
 =========================================
 
+=========================================
+	Update: Jan 14 2022
+=========================================
+		Added Metal Arms NTSC and Pal saves.
 
 =========================================
 	Update: Sep 15 2020
